--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,25 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
-    compileSdk 32
+    namespace = "kiu.dev.kyuhiltmvvm"
+    compileSdk 33
 
     defaultConfig {
         applicationId "kiu.dev.kyuhiltmvvm"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    // TODO chan 개발 운영 분기 필요
     buildTypes {
         release {
             minifyEnabled false
@@ -29,15 +33,90 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.2'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // rx kotlin
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    // RxJava
+    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
+    // rx lifecycle
+    implementation 'com.trello.rxlifecycle3:rxlifecycle:3.1.0'
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-android:3.1.0'
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-components:3.1.0'
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+    // eventbus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+    // okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation('com.github.ihsanbal:LoggingInterceptor:3.1.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+    // retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    // stetho
+    implementation 'com.facebook.stetho:stetho:1.6.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
+    // OkHttpProfiler
+    implementation 'com.localebro:okhttpprofiler:1.0.8'
+    // splash
+    implementation 'androidx.core:core-splashscreen:1.0.1'
+    // hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
+    // logger
+    implementation 'com.orhanobut:logger:2.2.0'
+//    // ViewModel
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+//    // LiveData
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+//    // activity-ktx & fragment-ktx
+//    implementation "androidx.activity:activity-ktx:1.7.1"
+//    implementation "androidx.fragment:fragment-ktx:1.5.7"
+
+    // glide
+    kapt 'com.github.bumptech.glide:compiler:4.14.2'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.14.2'
+    // glide transform
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
+    // room
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "androidx.room:room-ktx:2.5.1"
+    implementation "androidx.room:room-rxjava2:2.5.1"
+    implementation "androidx.room:room-rxjava3:2.5.1"
+    annotationProcessor "androidx.room:room-compiler:2.5.1"
+    kapt 'androidx.room:room-compiler:2.5.1'
+    // OkHttpProfiler
+    implementation 'com.localebro:okhttpprofiler:1.0.8'
+}
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
