--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:theme="@style/Theme.KyuHiltMVVM.Splash"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <activity
             android:name=".view.SplashActivity"
             android:exported="true"
@@ -31,9 +30,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.KyuHiltMVVM" />
+
+        <activity android:name=".view.SubActivity"
             android:exported="false"
             android:theme="@style/Theme.KyuHiltMVVM"/>
     </application>
